# cnet

./: AFActivationFunction.cpp  CMakeLists.txt  Layer.h  Net.cpp  Net.h  README.md  docconfig.txt
docs/: Classes.puml  Training.puml
docs/html/: AFFunctions_8h_source.html  AFMatrix_8h_source.html  Layer_8h_source.html  Loader_8h_source.html  Net_8h_source.html  _a_f_activation_function_8cpp.html  _a_f_activation_function_8h.html  _a_f_activation_function_8h_source.html  _a_f_functions_8h.html  _a_f_functions_8h_source.html  _a_f_matrix_8cpp.html  _a_f_matrix_8h.html  _a_f_matrix_8h.js  _a_f_matrix_8h_source.html  _layer_8cpp.html  _layer_8h.html  _layer_8h_source.html  _net_8cpp.html  _net_8h.html  _net_8h_source.html  annotated.html  annotated_dup.js  classAFActivationFunction-members.html  classAFActivationFunction.html  classAFLossFunction-members.html  classAFLossFunction.html  classAFMatrix-members.html  classAFMatrix.html  classAFSquareLossFunction-members.html  classAFSquareLossFunction.html  classCrossEntropyLoss-members.html  classCrossEntropyLoss.html  classIdentityFunction-members.html  classIdentityFunction.html  classLayer-members.html  classLayer.html  classLeakyReLU-members.html  classLeakyReLU.html  classLoader-members.html  classLoader.html  (+47 more)
docs/latex/: _a_f_activation_function_8cpp.tex  _a_f_activation_function_8h.tex  (+58 more)
src/: AFActivationFunction.h  AFFunctions.h  AFMatrix.cpp  AFMatrix.h  CMakeLists.txt  Layer.cpp  Layer.h  Loader.cpp  Loader.h  Net.cpp  Net.h  main.cpp
tests/: TestActivationFunction.h  TestLayer.h  TestMatrix.cpp  TestMatrix.h
(+49 files in other folders)
